--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Inter&family=Roboto+Slab:wght@100..900&display=swap');
+
+
+
+:root {
+  --primary-bk-color:black;
+  --primary-color: yellow;
+  --secondary-color: rgb(5, 196, 248);
+  --font-goldman: 'Goldman', sans-serif;
+}
