Ulteriori Modifiche per card

--- a/src/app/Componets/domanda/domanda.component.scss
+++ b/src/app/Componets/domanda/domanda.component.scss
@@ -95,6 +95,10 @@
     overflow: visible;
   }
 
+  .domanda{
+    margin-top: 40px;
+  }
+
   .button-cont {
     flex-direction: column;
     gap: 15px;
