Miglioramento layout card storico

--- a/src/app/Pages/storico/storico.component.html
+++ b/src/app/Pages/storico/storico.component.html
@@ -24,6 +24,7 @@
     }"
   >
     <h3>Partita {{ i + 1 }}</h3>
+    <p class="totali-text"> Totali: {{ partita.sbagliate + partita.giuste }}</p>
     <p>✅ Giuste: {{ partita.giuste }}</p>
     <p>❌ Sbagliate: {{ partita.sbagliate }}</p>
   </div>
